[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.0.2"
warp = "0.3.1"
tokio = { version = "1.0", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }